[gd_scene load_steps=19 format=3 uid="uid://2t51xt3spvld"]

[ext_resource type="Script" path="res://src/characters/bosses/The End/Boss_Parts/TheEnd_Control.gd" id="1_0inbp"]
[ext_resource type="Script" path="res://src/characters/bosses/The End/Boss_Parts/TheEnd.gd" id="2_xg4f6"]
[ext_resource type="Script" path="res://assets/resources/scripts/exchangable/health/health_exchangable.gd" id="3_1vnr6"]
[ext_resource type="PackedScene" uid="uid://dboeavc243luk" path="res://src/characters/bosses/The End/float.tscn" id="4_q54yb"]
[ext_resource type="Shader" path="res://assets/shaders/outline_shader.gdshader" id="5_0phod"]
[ext_resource type="Texture2D" uid="uid://6ncbw2yicwui" path="res://assets/sprites/characters/bosses/The End/The End Boss MEGASHEET.png" id="6_wvu1i"]
[ext_resource type="Script" path="res://custom_nodes/combat/health_monitor.gd" id="7_jxonu"]
[ext_resource type="PackedScene" uid="uid://brvyfync5c1iv" path="res://src/characters/bosses/The End/Boss_Parts/hand.tscn" id="8_i6skd"]

[sub_resource type="Resource" id="Resource_cywj5"]
script = ExtResource("3_1vnr6")
max_health = 6
name = ""
symbol = 0

[sub_resource type="Gradient" id="Gradient_3i6fu"]
offsets = PackedFloat32Array(0, 0.684588, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dcs65"]
gradient = SubResource("Gradient_3i6fu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_u84ya"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(-10, 0, 0)
emission_shape = 3
emission_box_extents = Vector3(30, 1, 1)
angle_min = -180.0
angle_max = 180.0
angular_velocity_min = -10.0
angular_velocity_max = 10.0
orbit_velocity_min = -0.01
orbit_velocity_max = 0.01
radial_velocity_max = 1.0
gravity = Vector3(0, 98, 0)
tangential_accel_min = -5.0
tangential_accel_max = 5.0
scale_min = 2.0
scale_max = 6.0
color_ramp = SubResource("GradientTexture1D_dcs65")
turbulence_enabled = true
turbulence_noise_strength = 4.0
turbulence_noise_speed = Vector3(0, 1, 0)
turbulence_initial_displacement_min = -100.0
turbulence_initial_displacement_max = 100.0

[sub_resource type="Animation" id="Animation_8ymmw"]
resource_name = "start"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Left_Hand:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Right_Hand:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7, 1, 1.3, 1.6, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Float_Right:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Float_Left:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 4.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1), Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Left_Hand:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Right_Hand:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Left_Hand:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(5.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-1200, -84)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Right_Hand:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(5.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(1200, -84)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("..:disable")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/11/type = "method"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath(".")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0],
"method": &"_next_sequence"
}]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Float:emitting")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 4.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_v18h1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Right_Hand:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Left_Hand:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Float_Right:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Float_Left:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Right_Hand:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.85, 0.85)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Left_Hand:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.85, 0.85)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("..:disable")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Float:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1uo2i"]
resource_name = "hurt"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.35),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.1, 0.9), Vector2(1.1, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Float_Left:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.35),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.1, 0.9), Vector2(1.1, 0.9), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Float_Right:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.35),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.1, 0.9), Vector2(1.1, 0.9), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_31bub"]
_data = {
"RESET": SubResource("Animation_v18h1"),
"hurt": SubResource("Animation_1uo2i"),
"start": SubResource("Animation_8ymmw")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fdxfv"]
shader = ExtResource("5_0phod")
shader_parameter/color = Color(0.333333, 1, 1, 0)
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/white_out = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hr52p"]
shader = ExtResource("5_0phod")
shader_parameter/color = Color(0.333333, 1, 1, 0)
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/white_out = 0.0

[node name="TheEnd" type="Node2D"]
z_index = -20
script = ExtResource("1_0inbp")
disable = true

[node name="TheEnd" type="CharacterBody2D" parent="." node_paths=PackedStringArray("left_float", "right_float", "left_hand", "right_hand")]
z_index = -2
y_sort_enabled = true
collision_layer = 520
script = ExtResource("2_xg4f6")
left_float = NodePath("Float_Left")
right_float = NodePath("Float_Right")
left_hand = NodePath("Left_Hand")
right_hand = NodePath("Right_Hand")
alignment = 1
health_handle = SubResource("Resource_cywj5")

[node name="Float" type="GPUParticles2D" parent="TheEnd"]
show_behind_parent = true
z_index = -2
position = Vector2(7, -21.2941)
scale = Vector2(1, 1)
amount = 10
process_material = SubResource("ParticleProcessMaterial_u84ya")
lifetime = 0.5
speed_scale = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="TheEnd"]
libraries = {
"": SubResource("AnimationLibrary_31bub")
}

[node name="Float_Left" parent="TheEnd" instance=ExtResource("4_q54yb")]
top_level = true
material = SubResource("ShaderMaterial_fdxfv")
position = Vector2(-111.551, -79.9878)
rest_offset = Vector2(-110, 0)
time_offset = 0.2
lerp_coefficent = 0.4

[node name="Body" type="Sprite2D" parent="TheEnd"]
material = SubResource("ShaderMaterial_hr52p")
position = Vector2(0, -93)
texture = ExtResource("6_wvu1i")
hframes = 8
vframes = 8
frame = 32

[node name="Float_Right" parent="TheEnd" instance=ExtResource("4_q54yb")]
top_level = true
position = Vector2(114.112, -79.2971)
right = true
rest_offset = Vector2(110, 0)
time_offset = 0.8
lerp_coefficent = 0.4

[node name="HealthMonitor" type="Node" parent="TheEnd"]
script = ExtResource("7_jxonu")
max_health = 6
_health = 6

[node name="Center" type="Marker2D" parent="TheEnd"]
position = Vector2(0, -84)

[node name="sequence_timer" type="Timer" parent="TheEnd"]
one_shot = true

[node name="aim_time" type="Timer" parent="TheEnd"]
one_shot = true

[node name="hurt_action" type="Timer" parent="TheEnd"]
one_shot = true

[node name="Left_Hand" parent="TheEnd" instance=ExtResource("8_i6skd")]
position = Vector2(-250, -84)
rest_offset = Vector2(-250, 0)
act_on_local = true

[node name="Right_Hand" parent="TheEnd" instance=ExtResource("8_i6skd")]
position = Vector2(250, -84)
right = true
rest_offset = Vector2(250, 0)
time_offset = 0.2
act_on_local = true

[connection signal="killed" from="TheEnd/HealthMonitor" to="." method="die"]
[connection signal="timeout" from="TheEnd/sequence_timer" to="TheEnd" method="_next_sequence"]
[connection signal="timeout" from="TheEnd/hurt_action" to="." method="end_hurt_action"]
